--- a/Core_Proje/Views/Service/AddService.cshtml
+++ b/Core_Proje/Views/Service/AddService.cshtml
@@ -1,23 +1,27 @@
 ﻿@model EntityLayer.Concrete.Service
 @{
     ViewData["Title"] = "AddService";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
 @using (Html.BeginForm("AddService", "Service", FormMethod.Post))
 {
-    <div class="card-header border-0">
-        <h3 class="mb-0">Deneyim Ekleme Sayfası</h3>
-        <br />
-        @Html.Label("Hizmet Başlığı")
-        @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
-        <br />
-        @Html.Label("Görsel")
-        @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
-        <br />
-        <button class="btn btn-outline-info">Kaydet</button>
-
-
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <p class="card-description"> Yeni Hizmet Ekleme </p>
+                <form class="forms-sample">
+                    <br />
+                    @Html.Label("Hizmet Başlığı")
+                    @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
+                    <br />
+                    @Html.Label("Görsel")
+                    @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
+                    <br />
+                    <button class="btn btn-outline-info">Kaydet</button>
+                </form>
+            </div>
+        </div>
     </div>
 }
 
