--- a/Core_Proje/Views/Default/Index.cshtml
+++ b/Core_Proje/Views/Default/Index.cshtml
@@ -54,8 +54,8 @@
             <footer class="pt-4 pb-4 text-center bg-light">
                 <div class="container">
                     <div class="my-3">
-                        <div class="h4">Walter Patterson</div>
-                        <p>Web Developer & Mobile Application Developer</p>
+                        <div class="h4">Recep Batur</div>
+                        <p>Software Developer & .Net Developer</p>
                         <div class="social-nav">
                             <nav role="navigation">
                                 <ul class="nav justify-content-center">
@@ -69,9 +69,9 @@
                         </div>
                     </div>
                     <div class="text-small text-secondary">
-                        <div class="mb-1">&copy; Super Folio. All rights reserved.</div>
+                        <div class="mb-1">&copy; @DateTime.Now Tüm Hakları Saklıdır.</div>
                         <div>
-                            <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>
+                            <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Html5 - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>
                         </div>
                     </div>
                 </div>
